--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
-<head>
-<title>Hello</title>
-</head>
+<header>
+<title>Penny's website</title>
+</header>
+<nav><a href="hobby.html"</a><a href="gallery.html"></a></nav>
 <body>
 <h1>Hello World!</h1>
 </body>
