--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </header>
 <nav><a href="hobby.html"</a><a href="gallery.html"></a></nav>
 <body>
-<h1>Hello World!</h1>
+<h1>About Me</h1>
+Hello, my name is Penny Barbour and I am a junior at Luther College. I am a Management major with a Computer Science minor. This is a page where I will be able to tell you my interests and hobbies, a photo gallery of my favorite things, and some of my upcoming assignments for CS 130. Enjoy!
 </body>
 </html>
