--- a/hobby.html
+++ b/hobby.html
@@ -1,1 +1,13 @@
-
+<html>
+  <header>My Interests and Hobbies</header>
+  <nav><a href="index.html"></a><a href="gallery.html"></a></nav>
+  <body>
+    <h1>Interests and Hobbies</h1>
+    <ul>
+      <li>Being really involved</li>
+      <li>Puppies and kittens</li>
+      <li>Cheese</li>
+      <li>Sometimes computers...(when they work)</li>
+    </ul>
+  </body>
+</html>
