--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
 <body>
 <h1>About Me</h1>
 Hello, my name is Penny Barbour and I am a junior at Luther College. I am a Management major with a Computer Science minor. This is a page where I will be able to tell you my interests and hobbies, a photo gallery of my favorite things, and some of my upcoming assignments for CS 130. Enjoy!
+<h1>Assignments</h1>
+<ul>
+  <li>Making this website using HTML</li>
+  <li>Designing this website using CSS</li>
+  <li>Doing some otherstuff using JavaScript wheeee!</li>
+</ul>
 </body>
 </html>
