--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </header>
 <nav><a href="hobby.html"</a><a href="gallery.html"></a></nav>
 <body>
+  <img src="https://www.facebook.com/photo.php?fbid=10204715501539855&l=e7afa5cc9c">
 <h1>About Me</h1>
 Hello, my name is Penny Barbour and I am a junior at Luther College. I am a Management major with a Computer Science minor. This is a page where I will be able to tell you my interests and hobbies, a photo gallery of my favorite things, and some of my upcoming assignments for CS 130. Enjoy!
 <h1>Assignments</h1>
