--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </header>
 <nav><a href="hobby.html"</a><a href="gallery.html"></a></nav>
 <body>
-  <img src="https://www.facebook.com/photo.php?fbid=10204715501539855&l=e7afa5cc9c">
+  <img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xat1/v/t1.0-1/p160x160/1601585_10204715501539855_8047998702496871640_n.jpg?oh=738b437851d9b4c0dec5ff44c73c8c48&oe=56420C29&__gda__=1446634821_94f83b056000f22e2730d51d5b1c4efa">
 <h1>About Me</h1>
 Hello, my name is Penny Barbour and I am a junior at Luther College. I am a Management major with a Computer Science minor. This is a page where I will be able to tell you my interests and hobbies, a photo gallery of my favorite things, and some of my upcoming assignments for CS 130. Enjoy!
 <h1>Assignments</h1>
