--- a/gallery.html
+++ b/gallery.html
@@ -1,5 +1,5 @@
 <html>
-  <table width='100%' border=1px cellspacing=0>
+  <table width='50%' cellspacing=0>
     <caption>Gallery</caption>
     <tr>
       <td><img src="https://pbs.twimg.com/profile_images/603052299284574208/nJXW0S4i.jpg"></td>
