--- a/gallery.html
+++ b/gallery.html
@@ -1,13 +1,17 @@
 <html>
+  <header>
+    <title>Penny's Hobbies</title>
+  </header>
+  <nav><a href="index.html">Home</a> <a href="hobby.html">Hobbies</a></nav>
   <table width='50%' cellspacing=0>
     <caption>Gallery</caption>
     <tr>
-      <td><img src="https://pbs.twimg.com/profile_images/603052299284574208/nJXW0S4i.jpg"></td>
-      <td><img src="https://www.luther.edu/reason/images/620629.jpg"></td>
+      <td><img width=100 height=100 src="https://pbs.twimg.com/profile_images/603052299284574208/nJXW0S4i.jpg"></td>
+      <td><img width=100 height=100 src="https://www.luther.edu/reason/images/620629.jpg"></td>
     </tr>
     <tr>
-      <td><img src="http://www.helpmakemiracles.org/assets/helpmakemiracles/images/$avatars$/constituent_1B3C99F5-C293-34EB-461A431B17C819BF.jpg"></td>
-      <td><img src="https://v.cdn.vine.co/v/avatars/4D2BCA0A-6BCA-4A85-BD59-516F68E9DA37-20197-0000086E56BD1127.jpg?versionId=hICB1a1YgWaD6C4dVU54OI6tj7xDFPEf"></td>
+      <td><img width=100 height=100 src="http://www.helpmakemiracles.org/assets/helpmakemiracles/images/$avatars$/constituent_1B3C99F5-C293-34EB-461A431B17C819BF.jpg"></td>
+      <td><img width=100 height=100 src="https://v.cdn.vine.co/v/avatars/4D2BCA0A-6BCA-4A85-BD59-516F68E9DA37-20197-0000086E56BD1127.jpg?versionId=hICB1a1YgWaD6C4dVU54OI6tj7xDFPEf"></td>
     </tr>
   </table>
 </html>
