--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <header>
 <title>Penny's website</title>
 </header>
-<nav><a href="hobby.html">Hobbies</a><a href="gallery.html">Gallery</a></nav>
+<nav><a href="hobby.html">Hobbies</a> <a href="gallery.html">Gallery</a></nav>
 <body>
   <img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xat1/v/t1.0-1/p160x160/1601585_10204715501539855_8047998702496871640_n.jpg?oh=738b437851d9b4c0dec5ff44c73c8c48&oe=56420C29&__gda__=1446634821_94f83b056000f22e2730d51d5b1c4efa">
 <h1>About Me</h1>
-Hello, my name is Penny Barbour and I am a junior at Luther College. I am a Management major with a Computer Science minor. This is a page where I will be able to tell you my interests and hobbies, a photo gallery of my favorite things, and some of my upcoming assignments for CS 130. Enjoy!
+My name is Penny Barbour and I am a junior at Luther College. I am a Management major with a Computer Science minor. This is a page where I will be able to tell you some of my hobbies, a photo gallery of my favorite things, and some of my upcoming assignments for CS 130.
 <h1>Assignments</h1>
 <ul>
   <li>Making this website using HTML</li>
