--- a/hobby.html
+++ b/hobby.html
@@ -1,5 +1,5 @@
 <html>
-  <nav><a href="index.html"></a><a href="gallery.html"></a></nav>
+  <nav><a href="index.html">Home</a> <a href="gallery.html">Gallery</a></nav>
   <body>
     <h1>Interests and Hobbies</h1>
     <ul>
@@ -7,6 +7,13 @@
       <li>Puppies and kittens</li>
       <li>Cheese</li>
       <li>Sometimes computers...(when they work)</li>
+    </ul>
+    <h1>Extracurriculars</h1>
+    <ul>
+      <li>Student Activities Council (SAC)</li>
+      <li>Collegiate Choir</li>
+      <li>Working for the Web Content Bureau</li>
+      <li>Freya Ultimate Frisbee team</li>
     </ul>
   </body>
 </html>
