--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <html>
+  <style>
+    body {
+      background-color: #33CCFF;
+      font-family: "Cosmic Sans MS", cursive, sans-serif;
+    }
+  </style>
 <header>
 <title>Penny's website</title>
 </header>
