--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <style>
     body {
       background-color: #33CCFF;
-      font-family: "Cosmic Sans MS", cursive, sans-serif;
+      font-family: Arial, Helvetica, sans-serif;
     }
   </style>
 <header>
