--- a/hobby.html
+++ b/hobby.html
@@ -1,5 +1,11 @@
 <html>
   <nav><a href="index.html">Home</a>   <a href="gallery.html">Gallery</a></nav>
+  <style>
+    body {
+      background-color: #33CCFF;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+  </style>
   <body>
     <h1>Interests and Hobbies</h1>
     <ul>
