--- a/gallery.html
+++ b/gallery.html
@@ -2,6 +2,12 @@
   <header>
     <title>Penny's Hobbies</title>
   </header>
+  <style>
+    body {
+      background-color: #33CCFF;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+  </style>
   <nav><a href="index.html">Home</a>   <a href="hobby.html">Hobbies</a></nav>
   <table width='50%' cellspacing=0>
     <tr>
