--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <style>
     body {
-      background-color: #33CCFF;
+      background-image: url("https://img0.etsystatic.com/020/0/9060921/il_340x270.566267750_940v.jpg")
       font-family: Arial, Helvetica, sans-serif;
     }
   </style>
