--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
       background-color: #33CCFF;
       font-family: Arial, Helvetica, sans-serif;
     }
+    .high {
+      font-color: red;
+    }
+    .medium {
+      font-color: orange;
+    }
+    .low {
+      font-color: gray;
+    }
   </style>
 <header>
 <title>Penny's website</title>
