--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
       background-color: #33CCFF;
       font-family: Arial, Helvetica, sans-serif;
     }
+    .done {
+      text-decoration: line-through;
+    }
     .high {
       font-color: red;
     }
