--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
       text-decoration: line-through;
     }
     .high {
-      font-color: red;
+      color: red;
     }
     .medium {
-      font-color: orange;
+      color: orange;
     }
     .low {
-      font-color: gray;
+      color: gray;
     }
   </style>
 <header>
