--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 My name is Penny Barbour and I am a junior at Luther College. I am a Management major with a Computer Science minor. This is a page where I will be able to tell you some of my hobbies, a photo gallery of my favorite things, and some of my upcoming assignments for CS 130.
 <h1>Assignments</h1>
 <ul>
-  <li class=high>Problem #10</li>
-  <li class=medium>Problem #3</li>
-  <li class=low>Problem #5 and #6</li>
-  <li class=high>Problem #16</li>
-  <li class=low>Problem #8</li>
-  <li class=done>Problem #1 and #2</li>
+  <li class="high done">Problem #10</li>
+  <li class="medium">Problem #3</li>
+  <li class="low done">Problem #5 and #6</li>
+  <li class="high">Problem #16</li>
+  <li class="low">Problem #8</li>
+  <li class="medium done">Problem #1 and #2</li>
 </ul>
 </body>
 </html>
