--- a/todolist.html
+++ b/todolist.html
@@ -1,4 +1,17 @@
 <html>
+  <header>
+    <title> To-do List </title>
+  </header>
+<nav><a href="index.html">Home</a>   <a href="hobby.html">Hobbies</a>   <a href="gallery.html"Gallery</a></nav>
 <body>
+<h1> My To-Do List</h1>
+<ul>
+  <li class="high done">Problem #10</li>
+  <li class="medium">Problem #3</li>
+  <li class="low done">Problem #5 and #6</li>
+  <li class="high">Problem #16</li>
+  <li class="low">Problem #8</li>
+  <li class="medium done">Problem #1 and #2</li>
+</ul>
 </body>
 </html>
