--- a/todo2.html
+++ b/todo2.html
@@ -1,2 +1,25 @@
 <html>
+  <body>
+    <section>
+      <ul>
+        <li> #1 </li>
+        <li> #2 </li>
+        <li> #3 </li>
+      </ul>
+    </section>
+    <section>
+      <ul>
+        <li> A </li>
+        <li> B </li>
+        <li> C </li>
+      </ul>
+    </section>
+    <section>
+      <ul>
+        <li> a </li>
+        <li> b </li>
+        <li> c </li>
+      </ul>
+    </section>
+  </body>
 </html>
