--- a/todo2.html
+++ b/todo2.html
@@ -1,25 +1,35 @@
 <html>
   <body>
-    <section>
-      <ul>
-        <li> #1 </li>
-        <li> #2 </li>
-        <li> #3 </li>
-      </ul>
-    </section>
-    <section>
-      <ul>
-        <li> A </li>
-        <li> B </li>
-        <li> C </li>
-      </ul>
-    </section>
-    <section>
-      <ul>
-        <li> a </li>
-        <li> b </li>
-        <li> c </li>
-      </ul>
-    </section>
+    <h1> To-Do List </h1>
+    <article>
+      <section class=high>
+        <ul>
+          <li> #1 </li>
+          <li> #2 </li>
+          <li> #3 </li>
+        </ul>
+      </section>
+      <section class=medium>
+        <ul>
+          <li> A </li>
+          <li> B </li>
+          <li> C </li>
+        </ul>
+      </section>
+      <section class=low>
+        <ul>
+          <li> a </li>
+          <li> b </li>
+          <li> c </li>
+        </ul>
+      </section>
+      <section class=done>
+        <ul>
+          <li> Done #1 </li>
+          <li> Done #2 </li>
+          <li> Done #3 </li>
+        </ul>
+      </section>
+    </article>
   </body>
 </html>
