--- a/todo2.html
+++ b/todo2.html
@@ -3,6 +3,7 @@
     <h1> To-Do List </h1>
     <article>
       <section class=high>
+        <h2> High Priority List </h2>
         <ul>
           <li> #1 </li>
           <li> #2 </li>
@@ -10,6 +11,7 @@
         </ul>
       </section>
       <section class=medium>
+        <h2> Medium Priority List </h2>
         <ul>
           <li> A </li>
           <li> B </li>
@@ -17,6 +19,7 @@
         </ul>
       </section>
       <section class=low>
+        <h2> Low Prioirty List </h2>
         <ul>
           <li> a </li>
           <li> b </li>
@@ -24,6 +27,7 @@
         </ul>
       </section>
       <section class=done>
+        <h2> Completed List </h2>
         <ul>
           <li> Done #1 </li>
           <li> Done #2 </li>
