--- a/todolist.html
+++ b/todolist.html
@@ -2,7 +2,7 @@
   <header>
     <link rel=stylesheet href=todolist.css type=text/css />
   </header>
-<nav><a href="index.html">Home</a>   <a href="hobby.html">Hobbies</a>   <a href="gallery.html"Gallery</a></nav>
+<nav><a href="index.html">Home</a>   <a href="hobby.html">Hobbies</a>   <a href="gallery.html">Gallery</a></nav>
 <body>
 <h1> My To-Do List</h1>
 <ul>
