--- a/todo2.html
+++ b/todo2.html
@@ -2,40 +2,40 @@
   <header>
     <link rel=stylesheet href=todo2.css type=text/css />
   </header>
-<nav><a href="index.html>Home</a>   <a href="hobby.html">Hobbies</a>   <a href="gallery.html">Gallery</a>   <a href="todolist.html">To-Do List #1</a></a></nav>
+<nav><a href="index.html">Home</a>   <a href="hobby.html">Hobbies</a>   <a href="gallery.html">Gallery</a>   <a href="todolist.html">To-Do List #1</a></a></nav>
   <body>
     <h1> To-Do List </h1>
     <article>
       <section class=high>
         <h2> High Priority List </h2>
         <ul>
-          <li> #1 </li>
-          <li> #2 </li>
-          <li> #3 </li>
+          <li> Finish homework for tomorrow </li>
+          <li> Get computer fixed </li>
+          <li> Workout </li>
         </ul>
       </section>
       <section class=medium>
         <h2> Medium Priority List </h2>
         <ul>
-          <li> A </li>
-          <li> B </li>
-          <li> C </li>
+          <li> Do laundry </li>
+          <li> Take out trash </li>
+          <li> Do homework for Monday </li>
         </ul>
       </section>
       <section class=low>
         <h2> Low Prioirty List </h2>
         <ul>
-          <li> a </li>
-          <li> b </li>
-          <li> c </li>
+          <li> Clean off desk </li>
+          <li> Clean out closet </li>
+          <li> Write letters </li>
         </ul>
       </section>
       <section class=done>
         <h2> Completed List </h2>
         <ul>
-          <li> Done #1 </li>
-          <li> Done #2 </li>
-          <li> Done #3 </li>
+          <li> Complete this project </li>
+          <li> Diagnose computer </li>
+          <li> Email professors </li>
         </ul>
       </section>
     </article>
