--- a/gallery.html
+++ b/gallery.html
@@ -8,7 +8,7 @@
       font-family: Arial, Helvetica, sans-serif;
     }
   </style>
-  <nav><a href="index.html">Home</a>   <a href="hobby.html">Hobbies</a>   <a href="todolist.html">To-Do List</a></nav>
+  <nav><a href="index.html">Home</a>   <a href="hobby.html">Hobbies</a>   <a href="todolist.html">To-Do List</a>   <a href="todo2.html">To-Do List #2</a></nav>
   <table width='50%' cellspacing=0>
     <tr>
       <td><img width=300 height=300 src="https://pbs.twimg.com/profile_images/603052299284574208/nJXW0S4i.jpg"></td>
