--- a/hobby.html
+++ b/hobby.html
@@ -1,5 +1,5 @@
 <html>
-  <nav><a href="index.html">Home</a>   <a href="gallery.html">Gallery</a>   <a href="todolist.html">To-Do List</a></nav>
+  <nav><a href="index.html">Home</a>   <a href="gallery.html">Gallery</a>   <a href="todolist.html">To-Do List</a>   <a href="todo2.html">To-Do List #2</a></nav>
   <style>
     body {
       background-color: #33CCFF;
