--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
 <html>
-  <style>
-    body {
-      background-color: #33CCFF;
-      font-family: Arial, Helvetica, sans-serif;
-    }
-  </style>
 <header>
+<link rel=stylesheet href=index.css type=text/css />  
 <title>Penny's website</title>
 </header>
 <nav><a href="hobby.html">Hobbies</a>   <a href="gallery.html">Gallery</a>   <a href="todolist.html">To-Do List #1 </a>   <a href="todo2.html">To-Do List #2</a></nav>
