--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
 </header>
 <nav><a href="hobby.html">Hobbies</a>   <a href="gallery.html">Gallery</a>   <a href="todolist.html">To-Do List #1 </a>   <a href="todo2.html">To-Do List #2</a></nav>
 <body>
+  <section.left>
   <img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xat1/v/t1.0-1/p160x160/1601585_10204715501539855_8047998702496871640_n.jpg?oh=738b437851d9b4c0dec5ff44c73c8c48&oe=56420C29&__gda__=1446634821_94f83b056000f22e2730d51d5b1c4efa">
-<h1>About Me</h1>
-My name is Penny Barbour and I am a junior at Luther College. I am a Management major with a Computer Science minor. This is a page where I will be able to tell you some of my hobbies, a photo gallery of my favorite things, and some of my upcoming assignments for CS 130.
-<h1>Assignments</h1>
-<ul>
-  <li>Problem #10</li>
-  <li>Problem #3</li>
-  <li>Problem #5 and #6</li>
-  <li>Problem #16</li>
-  <li>Problem #8</li>
-  <li>Problem #1 and #2</li>
-</ul>
+  </section>
+<section.right>
+  <h1>About Me</h1>
+  My name is Penny Barbour and I am a junior at Luther College. I am a Management major with a Computer Science minor. This is a page where I will be able to tell you some of my hobbies, a photo gallery of my favorite things, and some of my upcoming assignments for CS 130.
+  <h1>Assignments</h1>
+  <ul>
+    <li>Problem #10</li>
+    <li>Problem #3</li>
+    <li>Problem #5 and #6</li>
+    <li>Problem #16</li>
+    <li>Problem #8</li>
+    <li>Problem #1 and #2</li>
+  </ul>
+</section>
 </body>
 </html>
