--- a/todo3.html
+++ b/todo3.html
@@ -1,34 +1,28 @@
 <html>
   <header>
-    <link rel=stylesheet href=todo2.css type=text/css />
+    <link rel=stylesheet href=todo3.css type=text/css />
   </header>
-<nav><a href="index.html">Home</a>   <a href="hobby.html">Hobbies</a>   <a href="gallery.html">Gallery</a>   <a href="todolist.html">To-Do List #1</a></a></nav>
+<nav><a href="index.html">Home</a>   <a href="hobby.html">Hobbies</a>   <a href="gallery.html">Gallery</a>   <a href="todolist.html">To-Do List #1</a> <a href="todolist2.html">To-Do List #2</a></nav>
   <body>
     <h1> To-Do List </h1>
     <article>
       <section class=high>
         <h2> High Priority List </h2>
-        <ul>
-          <li> Finish homework for tomorrow </li>
-          <li> Get computer fixed </li>
-          <li> Workout </li>
-        </ul>
+        <input type="checkbox" name="high" value="Finish homework for tomorrow">Finish homework for tomorrow<br />
+        <input type="checkbox" name="high" value="Get computer fixed">Get computer fixed<br />
+        <input type="checkbox" name="high" value="Workout">Workout<br />
       </section>
       <section class=medium>
         <h2> Medium Priority List </h2>
-        <ul>
-          <li> Do laundry </li>
-          <li> Take out trash </li>
-          <li> Do homework for Monday </li>
-        </ul>
+        <input type="checkbox" name="medium" value="Do laundry">Do laundry<br />
+        <input type="checkbox" name="medium" value="Take out trash">Take out trash<br />
+        <input type="checkbox" name="medium" value="Do homework for Monday">Do homework for Monday<br />
       </section>
       <section class=low>
         <h2> Low Prioirty List </h2>
-        <ul>
-          <li> Clean off desk </li>
-          <li> Clean out closet </li>
-          <li> Write letters </li>
-        </ul>
+        <input type="checkbox" name="low" value="Clean off desk">Clean off desk<br />
+        <input type="checkbox" name="low" value="Clean out closet">Clean out closet<br />
+        <input type="checkbox" name="low" value="Write letters">Write letters<br />
       </section>
       <section class=done>
         <h2> Completed List </h2>
