--- a/todo3.html
+++ b/todo3.html
@@ -26,11 +26,9 @@
       </section>
       <section class=done>
         <h2> Completed List </h2>
-        <ul>
-          <li> Complete this project </li>
-          <li> Diagnose computer </li>
-          <li> Email professors </li>
-        </ul>
+        <input type="checkbox" name="done" value="Complete this project">Complete this project<br />
+        <input type="checkbox" name="done" value="Diagnose my computer">Diagnose my computer<br />
+        <input type="checkbox" name="done" value="Email Professors">Email professors<br />
       </section>
     </article>
   </body>
