--- a/checklist.html
+++ b/checklist.html
@@ -1,1 +1,19 @@
-
+<html>
+  <header>
+    <link rel=stylesheet href=checklist.css type=text/css />
+  </header>
+<nav><a href="index.html">Home</a>   <a href="hobby.html">Hobbies</a>   <a href="gallery.html">Gallery</a>   <a href="todolist.html">To-Do List #1</a> <a href="todolist2.html">To-Do List #2</a></nav>
+  <body>
+    <input id="newitem" value="Enter text here" type="text">
+    <button id="add" onclick="addTodo();">Add To-Do</button>
+    <select id="priority">
+      <option>High</option>
+      <option>Medium</option>
+      <option>Low</option>
+    </select>
+    <h1> Checklist </h1>
+    <section>
+      
+    </section>
+  </body>
+</html>
