--- a/checklist.html
+++ b/checklist.html
@@ -4,6 +4,7 @@
   </header>
 <nav><a href="index.html">Home</a>   <a href="hobby.html">Hobbies</a>   <a href="gallery.html">Gallery</a>   <a href="todolist.html">To-Do List #1</a> <a href="todolist2.html">To-Do List #2</a></nav>
   <body>
+    <h1 id="center"> Checklist </h1>
     <input id="newitem" value="Enter text here" type="text">
     <button id="add" onclick="addTodo();">Add To-Do</button>
     <select id="priority">
@@ -11,7 +12,6 @@
       <option>Medium</option>
       <option>Low</option>
     </select>
-    <h1> Checklist </h1>
     <section>
       
     </section>
