--- a/checklist.html
+++ b/checklist.html
@@ -4,16 +4,18 @@
   </header>
 <nav><a href="index.html">Home</a>   <a href="hobby.html">Hobbies</a>   <a href="gallery.html">Gallery</a>   <a href="todolist.html">To-Do List #1</a> <a href="todolist2.html">To-Do List #2</a></nav>
   <body>
-    <h1 id="center"> Checklist </h1>
-    <input id="newitem" value="Enter text here" type="text">
-    <button id="add" onclick="addTodo();">Add To-Do</button>
-    <select id="priority">
-      <option>High</option>
-      <option>Medium</option>
-      <option>Low</option>
-    </select>
+    <section id="inputbar"
+      <h1 id="center"> Checklist </h1>
+      <input id="newitem" value="Enter text here" type="text">
+      <button id="add" onclick="addTodo();">Add To-Do</button>
+      <select id="priority">
+        <option>High</option>
+        <option>Medium</option>
+        <option>Low</option>
+      </select>
+    </section>
     <section>
-      
+      <p>hi</p>
     </section>
   </body>
 </html>
