--- a/checklist.html
+++ b/checklist.html
@@ -5,7 +5,7 @@
 <nav><a href="index.html">Home</a>   <a href="hobby.html">Hobbies</a>   <a href="gallery.html">Gallery</a>   <a href="todolist.html">To-Do List #1</a> <a href="todolist2.html">To-Do List #2</a></nav>
   <body>
     <h1 id="center"> Checklist </h1>
-    <section id="inputbar"
+    <section id="inputbar">
       <input id="newitem" value="Enter text here" type="text" size="40">
       <select id="priority">
         <option>High</option>
