--- a/checklist.html
+++ b/checklist.html
@@ -14,7 +14,7 @@
       </select>
       <button id="add" onclick="addTodo();">Add To-Do</button>
     </section>
-    <section>
+    <section id="div">
     </section>
   </body>
 </html>
