--- a/checklist.html
+++ b/checklist.html
@@ -1,6 +1,7 @@
 <html>
   <header>
     <link rel=stylesheet href=checklist.css type=text/css />
+    <link rel=stylesheet href=checklist.js type=js />
   </header>
 <nav><a href="index.html">Home</a>   <a href="hobby.html">Hobbies</a>   <a href="gallery.html">Gallery</a>   <a href="todolist.html">To-Do List #1</a> <a href="todolist2.html">To-Do List #2</a></nav>
   <body>
