--- a/checklist.html
+++ b/checklist.html
@@ -7,7 +7,7 @@
   <body>
     <h1 id="center"> Checklist </h1>
     <section id="inputbar">
-      <input id="newitem" value="Enter text here" type="text" size="40">
+      <input id="input" value="Enter text here" type="text" size="40">
       <select id="priority">
         <option>High</option>
         <option>Medium</option>
