--- a/checklist.html
+++ b/checklist.html
@@ -16,6 +16,8 @@
       <button id="add" onclick="addTodo();">Add To-Do</button>
     </section>
     <section id="div">
+      <ul id="list"></ul>
     </section>
+    <script type="text/javascript" src="checklist.js"></script>
   </body>
 </html>
