--- a/checklist.html
+++ b/checklist.html
@@ -15,7 +15,7 @@
       <button id="add" onclick="addTodo();">Add To-Do</button>
     </section>
     <section id="div">
-      <ul id="list" style="list-style: none; "></ul>
+      <ul id="list"></ul>
     </section>
     <script type="text/javascript" src="checklist.js"></script>
   </body>
