--- a/checklist.html
+++ b/checklist.html
@@ -18,5 +18,8 @@
       <ul id="list"></ul>
     </section>
     <script type="text/javascript" src="checklist.js"></script>
+    <script type="text/javascript">
+      window.onload = function() { restoreList("list", boxChecked) }
+    </script>
   </body>
 </html>
