--- a/checklist.html
+++ b/checklist.html
@@ -18,6 +18,7 @@
       <ul id="list"></ul>
     </section>
     <script type="text/javascript" src="checklist.js"></script>
+    <script type="text/javascript" src="http://bnmnetp.github.io/CS130/listsaver.js"></script>
     <script type="text/javascript">
       window.onload = function() { restoreList("list", boxChecked) }
     </script>
