--- a/checklist.html
+++ b/checklist.html
@@ -2,7 +2,7 @@
   <header>
     <link rel=stylesheet href=checklist.css type=text/css />
   </header>
-<nav><a href="index.html">Home</a>   <a href="hobby.html">Hobbies</a>   <a href="gallery.html">Gallery</a>   <a href="todolist.html">To-Do List #1</a> <a href="todolist2.html">To-Do List #2</a></nav>
+<nav><a href="index.html">Home</a>   <a href="hobby.html">Hobbies</a>   <a href="gallery.html">Gallery</a>   <a href="todolist.html">To-Do List #1</a> <a href="todo2.html">To-Do List #2</a></nav>
   <body>
     <h1 id="center"> Checklist </h1>
     <section id="inputbar">
