--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
   My name is Penny Barbour and I am a junior at Luther College. I am a Management major with a Computer Science minor. This is a page where I will be able to tell you some of my hobbies, a photo gallery of my favorite things, and some of my upcoming assignments for CS 130.
   <h1>Assignments</h1>
   <ul>
-    <li>Problem #10</li>
-    <li>Problem #3</li>
-    <li>Problem #5 and #6</li>
-    <li>Problem #16</li>
-    <li>Problem #8</li>
-    <li>Problem #1 and #2</li>
+    <li><a href="todolist.html">To-do List #1</a></li>
+    <li><a href="todo2.html">To-do List #2</a></li>
+    <li><a href="todo3.html">To-do List #3</a></li>
+    <li><a href="checklist.html">Checklist</a></li>
   </ul>
 </section>
 <footer>
