--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <link rel=stylesheet href=index.css type=text/css />  
 <title>Penny's website</title>
 </header>
-<nav><a href="hobby.html">Hobbies</a>   <a href="gallery.html">Gallery</a>   <a href="todolist.html">To-Do List #1 </a>   <a href="todo2.html">To-Do List #2</a></nav>
+<nav><a href="hobby.html">Hobbies</a>   <a href="gallery.html">Gallery</a>   <a href="todolist.html">To-Do List #1 </a>   <a href="todo2.html">To-Do List #2</a>  <a href="todo3.html">To-Do List #3</a>  <a href="checklist.html">Checklist</a></nav>
 <body>
   <section class="left">
   <img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xat1/v/t1.0-1/p160x160/1601585_10204715501539855_8047998702496871640_n.jpg?oh=738b437851d9b4c0dec5ff44c73c8c48&oe=56420C29&__gda__=1446634821_94f83b056000f22e2730d51d5b1c4efa">
